--- a/index.html
+++ b/index.html
@@ -16,11 +16,24 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-colour">Khandaker Janamul Hoque's</span> World</h1>
             <h3>Programmer and Developer</h3>
-            <p> I am a web developer having expertise in frontend. I can design & develop web apps using the latest technologies to deliver the product with quality code.I am good at UI fundamentalstechnologies and can adapt to most the frontend frameworks quickly.</p>
+            <p> I am a developer having expertise in frontend. I can design & develop website, apps using the latest technologies to deliver the product with quality code. Besides I'm Familier with Programming. I am good at UI fundamentals technologies and can adapt to most the frontend frameworks quickly.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/khandaker-janamul-hoque-602a621b2/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/janamul-bg.png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/Janamul-bg2 copy.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Programmer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DWONLOAD RESUME</a>
+            
         </div>
     </section>
 </body>
