--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-colour">Khandaker Janamul Hoque's</span> World</h1>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/Janamul-bg2 copy.png" alt="">
         </div>
@@ -36,5 +36,25 @@
             
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-colour">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-colour">2022-2024 | Hero Level Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>Programming Hero Initiative.</p>
+    <p><strong><a href="#"> Khandaker Janamul Hoque </a>&copy; 2022 - Copyright. All Rights Reserved.</strong></p>
+</footer>
 </html>
