--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </section>
 </body>
 <footer>
-    <p>Programming Hero Initiative.</p>
+    
+<!--     <p>Programming Hero Initiative.</p> -->
+    <p>Baby Steps Are Better Than Stoping.</p>
     <p><strong><a href="#"> Khandaker Janamul Hoque </a>&copy; 2023 - Copyright. All Rights Reserved.</strong></p>
 </footer>
 </html>
